fixing gap

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -117,7 +117,9 @@
 
 @media only screen and (max-width: 480px) {
     .contact-container {
+        display: flex;
         flex-direction: column;
+        -webkit-flex-direction: column;
     }
 
     .contact-text-flex-box {
