--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
